# Hello

cpp/: CMakeLists.txt
cpp/algorithms_library/: count.cpp  for_each.cpp  search.cpp  sort.cpp
cpp/built-in_types/: char.cpp
cpp/class_and_struct/: constructor.cpp  explicit.cpp
cpp/compiling/: compile_time.cpp  foo.inc  preprocessor.cpp
cpp/containers_library/: CMakeLists.txt  array.cpp  deque.cpp  forward_list.cpp  invalid_iterator.cpp  list.cpp  map.cpp  set.cpp  string.cpp  unordered_map.cpp  unordered_set.cpp  vector.cpp
cpp/declaration/: auto.cpp  const.cpp  decltype.cpp  mutable.cpp  volatile.cpp
cpp/design_patterns/: singleton.cpp
cpp/exceptions/: exception.cpp  noexcept.cpp
cpp/expression/: CMakeLists.txt  cast.cpp
cpp/functions/: default_arguments.cpp  defaulted_and_deleted.cpp  function.cpp  inline.cpp  name_lookup.cpp  overloading.cpp  variable_argument_lists.cpp  variadic_templates.cpp
cpp/iterator_library/: iterators.cpp
cpp/lifetime/: memory.cpp  raii.cpp
cpp/memory/: CMakeLists.txt  size.cpp
cpp/multithreading/: async.cpp  atomic.cpp  call_once.cpp  thread_local.cpp
cpp/paradigms/: lambda.cpp
cpp/pointers/: shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
cpp/strings_library/: string.cpp  string_view.cpp
lua/: object_oriented.lua
lua/expression/: table.lua
